# TaskManagementSystemProj

./: .dockerignore  .env  .gitignore  Dockerfile  ci.sh  docker-compose-test.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: CI.yaml  deploy.yaml  docker-compose.test.yaml
DjangoProject/: celery.py  settings.py  urls.py
apps/tasks/: admin.py  apps.py  documents.py  factories.py  filters.py  models.py  receivers.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/tasks/management/commands/: generate.py
apps/tasks/migrations/: 0001_initial.py  0002_comment.py  0003_alter_task_status_timelog.py  0004_attachment.py
apps/tasks/templates/: profile.html
apps/tasks/templates/tasks/email/: top_tasks_report.html
apps/users/: urls.py  views.py
